# c_revision

./: CMakeLists.txt  array.c  array.h  file_operations.c  file_operations.h  function_pointers.c  function_pointers.h  main.c  pointers.c  pointers.h  preprocessors.c  preprocessors.h  simplify_declarations.txt  singly_linked_list_2.c  singly_linked_list_2.h  structure.c  structure.h
datastructures/: binary_tree.c  binary_tree.h  circular_buffer.c  circular_ring_buffer.c  circular_ring_buffer.h  doubly_linked_list.c  doubly_linked_list.h  hash_table.c  hash_table.h  queue.c  queue.h  singly_linked_list.c  singly_linked_list.h
